[JBIDE-8793] implemented #start
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@30993 a97e2381-89e5-4abb-bab3-167db6db766c